--- a/res/styles/shThemeFadeToGrey.css
+++ b/res/styles/shThemeFadeToGrey.css
@@ -14,104 +14,104 @@
  * @license
  * Dual licensed under the MIT and GPL licenses.
  */
-.syntaxhighlighter {
+.SyntaxHighlighter {
   background-color: #121212 !important;
 }
-.syntaxhighlighter .line.alt1 {
+.SyntaxHighlighter .line.alt1 {
   background-color: #121212 !important;
 }
-.syntaxhighlighter .line.alt2 {
+.SyntaxHighlighter .line.alt2 {
   background-color: #121212 !important;
 }
-.syntaxhighlighter .line.highlighted.alt1, .syntaxhighlighter .line.highlighted.alt2 {
+.SyntaxHighlighter .line.highlighted.alt1, .SyntaxHighlighter .line.highlighted.alt2 {
   background-color: #2c2c29 !important;
 }
-.syntaxhighlighter .line.highlighted.number {
+.SyntaxHighlighter .line.highlighted.number {
   color: white !important;
 }
-.syntaxhighlighter table caption {
+.SyntaxHighlighter table caption {
   color: white !important;
 }
-.syntaxhighlighter .gutter {
+.SyntaxHighlighter .gutter {
   color: #afafaf !important;
 }
-.syntaxhighlighter .gutter .line {
+.SyntaxHighlighter .gutter .line {
   border-right: 3px solid #3185b9 !important;
 }
-.syntaxhighlighter .gutter .line.highlighted {
+.SyntaxHighlighter .gutter .line.highlighted {
   background-color: #3185b9 !important;
   color: #121212 !important;
 }
-.syntaxhighlighter.printing .line .content {
+.SyntaxHighlighter.printing .line .content {
   border: none !important;
 }
-.syntaxhighlighter.collapsed {
+.SyntaxHighlighter.collapsed {
   overflow: visible !important;
 }
-.syntaxhighlighter.collapsed .toolbar {
+.SyntaxHighlighter.collapsed .toolbar {
   color: #3185b9 !important;
   background: black !important;
   border: 1px solid #3185b9 !important;
 }
-.syntaxhighlighter.collapsed .toolbar a {
+.SyntaxHighlighter.collapsed .toolbar a {
   color: #3185b9 !important;
 }
-.syntaxhighlighter.collapsed .toolbar a:hover {
+.SyntaxHighlighter.collapsed .toolbar a:hover {
   color: #d01d33 !important;
 }
-.syntaxhighlighter .toolbar {
+.SyntaxHighlighter .toolbar {
   color: white !important;
   background: #3185b9 !important;
   border: none !important;
 }
-.syntaxhighlighter .toolbar a {
+.SyntaxHighlighter .toolbar a {
   color: white !important;
 }
-.syntaxhighlighter .toolbar a:hover {
+.SyntaxHighlighter .toolbar a:hover {
   color: #96daff !important;
 }
-.syntaxhighlighter .plain, .syntaxhighlighter .plain a {
+.SyntaxHighlighter .plain, .SyntaxHighlighter .plain a {
   color: white !important;
 }
-.syntaxhighlighter .comments, .syntaxhighlighter .comments a {
+.SyntaxHighlighter .comments, .SyntaxHighlighter .comments a {
   color: #696854 !important;
 }
-.syntaxhighlighter .string, .syntaxhighlighter .string a {
+.SyntaxHighlighter .string, .SyntaxHighlighter .string a {
   color: #e3e658 !important;
 }
-.syntaxhighlighter .keyword {
+.SyntaxHighlighter .keyword {
   color: #d01d33 !important;
 }
-.syntaxhighlighter .preprocessor {
+.SyntaxHighlighter .preprocessor {
   color: #435a5f !important;
 }
-.syntaxhighlighter .variable {
+.SyntaxHighlighter .variable {
   color: #898989 !important;
 }
-.syntaxhighlighter .value {
+.SyntaxHighlighter .value {
   color: #009900 !important;
 }
-.syntaxhighlighter .functions {
+.SyntaxHighlighter .functions {
   color: #aaaaaa !important;
 }
-.syntaxhighlighter .constants {
+.SyntaxHighlighter .constants {
   color: #96daff !important;
 }
-.syntaxhighlighter .script {
+.SyntaxHighlighter .script {
   font-weight: bold !important;
   color: #d01d33 !important;
   background-color: none !important;
 }
-.syntaxhighlighter .color1, .syntaxhighlighter .color1 a {
+.SyntaxHighlighter .color1, .SyntaxHighlighter .color1 a {
   color: #ffc074 !important;
 }
-.syntaxhighlighter .color2, .syntaxhighlighter .color2 a {
+.SyntaxHighlighter .color2, .SyntaxHighlighter .color2 a {
   color: #4a8cdb !important;
 }
-.syntaxhighlighter .color3, .syntaxhighlighter .color3 a {
+.SyntaxHighlighter .color3, .SyntaxHighlighter .color3 a {
   color: #96daff !important;
 }
 
-.syntaxhighlighter .functions {
+.SyntaxHighlighter .functions {
   font-weight: bold !important;
 }
