--- a/res/styles/shCore.css
+++ b/res/styles/shCore.css
@@ -14,16 +14,16 @@
  * @license
  * Dual licensed under the MIT and GPL licenses.
  */
-.syntaxhighlighter a,
-.syntaxhighlighter div,
-.syntaxhighlighter code,
-.syntaxhighlighter table,
-.syntaxhighlighter table td,
-.syntaxhighlighter table tr,
-.syntaxhighlighter table tbody,
-.syntaxhighlighter table thead,
-.syntaxhighlighter table caption,
-.syntaxhighlighter textarea {
+.SyntaxHighlighter a,
+.SyntaxHighlighter div,
+.SyntaxHighlighter code,
+.SyntaxHighlighter table,
+.SyntaxHighlighter table td,
+.SyntaxHighlighter table tr,
+.SyntaxHighlighter table tbody,
+.SyntaxHighlighter table thead,
+.SyntaxHighlighter table caption,
+.SyntaxHighlighter textarea {
   -moz-border-radius: 0 0 0 0 !important;
   -webkit-border-radius: 0 0 0 0 !important;
   background: none !important;
@@ -52,39 +52,39 @@
   min-height: auto !important;
 }
 
-.syntaxhighlighter {
+.SyntaxHighlighter {
   width: 100% !important;
   margin: 1em 0 1em 0 !important;
   position: relative !important;
   overflow: auto !important;
   font-size: 1em !important;
 }
-.syntaxhighlighter.source {
+.SyntaxHighlighter.source {
   overflow: hidden !important;
 }
-.syntaxhighlighter .bold {
+.SyntaxHighlighter .bold {
   font-weight: bold !important;
 }
-.syntaxhighlighter .italic {
+.SyntaxHighlighter .italic {
   font-style: italic !important;
 }
-.syntaxhighlighter .line {
+.SyntaxHighlighter .line {
   white-space: pre !important;
 }
-.syntaxhighlighter table {
+.SyntaxHighlighter table {
   width: 100% !important;
 }
-.syntaxhighlighter table caption {
+.SyntaxHighlighter table caption {
   text-align: left !important;
   padding: .5em 0 0.5em 1em !important;
 }
-.syntaxhighlighter table td.code {
+.SyntaxHighlighter table td.code {
   width: 100% !important;
 }
-.syntaxhighlighter table td.code .container {
+.SyntaxHighlighter table td.code .container {
   position: relative !important;
 }
-.syntaxhighlighter table td.code .container textarea {
+.SyntaxHighlighter table td.code .container textarea {
   box-sizing: border-box !important;
   position: absolute !important;
   left: 0 !important;
@@ -97,41 +97,41 @@
   overflow: hidden !important;
   white-space: pre !important;
 }
-.syntaxhighlighter table td.gutter .line {
+.SyntaxHighlighter table td.gutter .line {
   text-align: right !important;
   padding: 0 0.5em 0 1em !important;
 }
-.syntaxhighlighter table td.code .line {
+.SyntaxHighlighter table td.code .line {
   padding: 0 1em !important;
 }
-.syntaxhighlighter.nogutter td.code .container textarea, .syntaxhighlighter.nogutter td.code .line {
+.SyntaxHighlighter.nogutter td.code .container textarea, .SyntaxHighlighter.nogutter td.code .line {
   padding-left: 0em !important;
 }
-.syntaxhighlighter.show {
+.SyntaxHighlighter.show {
   display: block !important;
 }
-.syntaxhighlighter.collapsed table {
+.SyntaxHighlighter.collapsed table {
   display: none !important;
 }
-.syntaxhighlighter.collapsed .toolbar {
+.SyntaxHighlighter.collapsed .toolbar {
   padding: 0.1em 0.8em 0em 0.8em !important;
   font-size: 1em !important;
   position: static !important;
   width: auto !important;
   height: auto !important;
 }
-.syntaxhighlighter.collapsed .toolbar span {
+.SyntaxHighlighter.collapsed .toolbar span {
   display: inline !important;
   margin-right: 1em !important;
 }
-.syntaxhighlighter.collapsed .toolbar span a {
+.SyntaxHighlighter.collapsed .toolbar span a {
   padding: 0 !important;
   display: none !important;
 }
-.syntaxhighlighter.collapsed .toolbar span a.expandSource {
+.SyntaxHighlighter.collapsed .toolbar span a.expandSource {
   display: inline !important;
 }
-.syntaxhighlighter .toolbar {
+.SyntaxHighlighter .toolbar {
   position: absolute !important;
   right: 1px !important;
   top: 1px !important;
@@ -140,87 +140,87 @@
   font-size: 10px !important;
   z-index: 10 !important;
 }
-.syntaxhighlighter .toolbar span.title {
+.SyntaxHighlighter .toolbar span.title {
   display: inline !important;
 }
-.syntaxhighlighter .toolbar a {
+.SyntaxHighlighter .toolbar a {
   display: block !important;
   text-align: center !important;
   text-decoration: none !important;
   padding-top: 1px !important;
 }
-.syntaxhighlighter .toolbar a.expandSource {
+.SyntaxHighlighter .toolbar a.expandSource {
   display: none !important;
 }
-.syntaxhighlighter.ie {
+.SyntaxHighlighter.ie {
   font-size: .9em !important;
   padding: 1px 0 1px 0 !important;
 }
-.syntaxhighlighter.ie .toolbar {
+.SyntaxHighlighter.ie .toolbar {
   line-height: 8px !important;
 }
-.syntaxhighlighter.ie .toolbar a {
+.SyntaxHighlighter.ie .toolbar a {
   padding-top: 0px !important;
 }
-.syntaxhighlighter.printing .line.alt1 .content,
-.syntaxhighlighter.printing .line.alt2 .content,
-.syntaxhighlighter.printing .line.highlighted .number,
-.syntaxhighlighter.printing .line.highlighted.alt1 .content,
-.syntaxhighlighter.printing .line.highlighted.alt2 .content {
+.SyntaxHighlighter.printing .line.alt1 .content,
+.SyntaxHighlighter.printing .line.alt2 .content,
+.SyntaxHighlighter.printing .line.highlighted .number,
+.SyntaxHighlighter.printing .line.highlighted.alt1 .content,
+.SyntaxHighlighter.printing .line.highlighted.alt2 .content {
   background: none !important;
 }
-.syntaxhighlighter.printing .line .number {
+.SyntaxHighlighter.printing .line .number {
   color: #bbbbbb !important;
 }
-.syntaxhighlighter.printing .line .content {
+.SyntaxHighlighter.printing .line .content {
   color: black !important;
 }
-.syntaxhighlighter.printing .toolbar {
+.SyntaxHighlighter.printing .toolbar {
   display: none !important;
 }
-.syntaxhighlighter.printing a {
+.SyntaxHighlighter.printing a {
   text-decoration: none !important;
 }
-.syntaxhighlighter.printing .plain, .syntaxhighlighter.printing .plain a {
+.SyntaxHighlighter.printing .plain, .SyntaxHighlighter.printing .plain a {
   color: black !important;
 }
-.syntaxhighlighter.printing .comments, .syntaxhighlighter.printing .comments a {
+.SyntaxHighlighter.printing .comments, .SyntaxHighlighter.printing .comments a {
   color: #008200 !important;
 }
-.syntaxhighlighter.printing .string, .syntaxhighlighter.printing .string a {
+.SyntaxHighlighter.printing .string, .SyntaxHighlighter.printing .string a {
   color: blue !important;
 }
-.syntaxhighlighter.printing .keyword {
+.SyntaxHighlighter.printing .keyword {
   color: #006699 !important;
   font-weight: bold !important;
 }
-.syntaxhighlighter.printing .preprocessor {
+.SyntaxHighlighter.printing .preprocessor {
   color: gray !important;
 }
-.syntaxhighlighter.printing .variable {
+.SyntaxHighlighter.printing .variable {
   color: #aa7700 !important;
 }
-.syntaxhighlighter.printing .value {
+.SyntaxHighlighter.printing .value {
   color: #009900 !important;
 }
-.syntaxhighlighter.printing .functions {
+.SyntaxHighlighter.printing .functions {
   color: #ff1493 !important;
 }
-.syntaxhighlighter.printing .constants {
+.SyntaxHighlighter.printing .constants {
   color: #0066cc !important;
 }
-.syntaxhighlighter.printing .script {
+.SyntaxHighlighter.printing .script {
   font-weight: bold !important;
 }
-.syntaxhighlighter.printing .color1, .syntaxhighlighter.printing .color1 a {
+.SyntaxHighlighter.printing .color1, .SyntaxHighlighter.printing .color1 a {
   color: gray !important;
 }
-.syntaxhighlighter.printing .color2, .syntaxhighlighter.printing .color2 a {
+.SyntaxHighlighter.printing .color2, .SyntaxHighlighter.printing .color2 a {
   color: #ff1493 !important;
 }
-.syntaxhighlighter.printing .color3, .syntaxhighlighter.printing .color3 a {
+.SyntaxHighlighter.printing .color3, .SyntaxHighlighter.printing .color3 a {
   color: red !important;
 }
-.syntaxhighlighter.printing .break, .syntaxhighlighter.printing .break a {
+.SyntaxHighlighter.printing .break, .SyntaxHighlighter.printing .break a {
   color: black !important;
 }
