--- a/res/styles/shThemeEmacs.css
+++ b/res/styles/shThemeEmacs.css
@@ -14,100 +14,100 @@
  * @license
  * Dual licensed under the MIT and GPL licenses.
  */
-.syntaxhighlighter {
+.SyntaxHighlighter {
   background-color: black !important;
 }
-.syntaxhighlighter .line.alt1 {
+.SyntaxHighlighter .line.alt1 {
   background-color: black !important;
 }
-.syntaxhighlighter .line.alt2 {
+.SyntaxHighlighter .line.alt2 {
   background-color: black !important;
 }
-.syntaxhighlighter .line.highlighted.alt1, .syntaxhighlighter .line.highlighted.alt2 {
+.SyntaxHighlighter .line.highlighted.alt1, .SyntaxHighlighter .line.highlighted.alt2 {
   background-color: #2a3133 !important;
 }
-.syntaxhighlighter .line.highlighted.number {
+.SyntaxHighlighter .line.highlighted.number {
   color: white !important;
 }
-.syntaxhighlighter table caption {
+.SyntaxHighlighter table caption {
   color: #d3d3d3 !important;
 }
-.syntaxhighlighter .gutter {
+.SyntaxHighlighter .gutter {
   color: #d3d3d3 !important;
 }
-.syntaxhighlighter .gutter .line {
+.SyntaxHighlighter .gutter .line {
   border-right: 3px solid #990000 !important;
 }
-.syntaxhighlighter .gutter .line.highlighted {
+.SyntaxHighlighter .gutter .line.highlighted {
   background-color: #990000 !important;
   color: black !important;
 }
-.syntaxhighlighter.printing .line .content {
+.SyntaxHighlighter.printing .line .content {
   border: none !important;
 }
-.syntaxhighlighter.collapsed {
+.SyntaxHighlighter.collapsed {
   overflow: visible !important;
 }
-.syntaxhighlighter.collapsed .toolbar {
+.SyntaxHighlighter.collapsed .toolbar {
   color: #ebdb8d !important;
   background: black !important;
   border: 1px solid #990000 !important;
 }
-.syntaxhighlighter.collapsed .toolbar a {
+.SyntaxHighlighter.collapsed .toolbar a {
   color: #ebdb8d !important;
 }
-.syntaxhighlighter.collapsed .toolbar a:hover {
+.SyntaxHighlighter.collapsed .toolbar a:hover {
   color: #ff7d27 !important;
 }
-.syntaxhighlighter .toolbar {
+.SyntaxHighlighter .toolbar {
   color: white !important;
   background: #990000 !important;
   border: none !important;
 }
-.syntaxhighlighter .toolbar a {
+.SyntaxHighlighter .toolbar a {
   color: white !important;
 }
-.syntaxhighlighter .toolbar a:hover {
+.SyntaxHighlighter .toolbar a:hover {
   color: #9ccff4 !important;
 }
-.syntaxhighlighter .plain, .syntaxhighlighter .plain a {
+.SyntaxHighlighter .plain, .SyntaxHighlighter .plain a {
   color: #d3d3d3 !important;
 }
-.syntaxhighlighter .comments, .syntaxhighlighter .comments a {
+.SyntaxHighlighter .comments, .SyntaxHighlighter .comments a {
   color: #ff7d27 !important;
 }
-.syntaxhighlighter .string, .syntaxhighlighter .string a {
+.SyntaxHighlighter .string, .SyntaxHighlighter .string a {
   color: #ff9e7b !important;
 }
-.syntaxhighlighter .keyword {
+.SyntaxHighlighter .keyword {
   color: aqua !important;
 }
-.syntaxhighlighter .preprocessor {
+.SyntaxHighlighter .preprocessor {
   color: #aec4de !important;
 }
-.syntaxhighlighter .variable {
+.SyntaxHighlighter .variable {
   color: #ffaa3e !important;
 }
-.syntaxhighlighter .value {
+.SyntaxHighlighter .value {
   color: #009900 !important;
 }
-.syntaxhighlighter .functions {
+.SyntaxHighlighter .functions {
   color: #81cef9 !important;
 }
-.syntaxhighlighter .constants {
+.SyntaxHighlighter .constants {
   color: #ff9e7b !important;
 }
-.syntaxhighlighter .script {
+.SyntaxHighlighter .script {
   font-weight: bold !important;
   color: aqua !important;
   background-color: none !important;
 }
-.syntaxhighlighter .color1, .syntaxhighlighter .color1 a {
+.SyntaxHighlighter .color1, .SyntaxHighlighter .color1 a {
   color: #ebdb8d !important;
 }
-.syntaxhighlighter .color2, .syntaxhighlighter .color2 a {
+.SyntaxHighlighter .color2, .SyntaxHighlighter .color2 a {
   color: #ff7d27 !important;
 }
-.syntaxhighlighter .color3, .syntaxhighlighter .color3 a {
+.SyntaxHighlighter .color3, .SyntaxHighlighter .color3 a {
   color: #aec4de !important;
 }
